# ml-titanic

./: .tool-versions  main.ipynb  pyproject.toml
models/: high_accuracy_model_accuracy_90.keras
